[gd_scene load_steps=26 format=3 uid="uid://csx1s25rer0u6"]

[ext_resource type="Script" path="res://Scripts/enemyScripts/boss_slime.gd" id="1_y750s"]
[ext_resource type="Texture2D" uid="uid://cju7ikpet0xr" path="res://Assets/bosses/slime_king.png" id="2_4htae"]
[ext_resource type="PackedScene" uid="uid://bnxg0hhs6nudg" path="res://Scenes/Enemy/enemy_tanah.tscn" id="2_g2rsr"]
[ext_resource type="PackedScene" uid="uid://dnp3cnywdbm7e" path="res://Scenes/Hud/health_barBos.tscn" id="4_g2rsr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4htae"]
atlas = ExtResource("2_4htae")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2rsr"]
atlas = ExtResource("2_4htae")
region = Rect2(48, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibkcb"]
atlas = ExtResource("2_4htae")
region = Rect2(96, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeu7y"]
atlas = ExtResource("2_4htae")
region = Rect2(144, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5ks"]
atlas = ExtResource("2_4htae")
region = Rect2(48, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7pji"]
atlas = ExtResource("2_4htae")
region = Rect2(96, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2fko"]
atlas = ExtResource("2_4htae")
region = Rect2(0, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxxyq"]
atlas = ExtResource("2_4htae")
region = Rect2(48, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34256"]
atlas = ExtResource("2_4htae")
region = Rect2(96, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mt4b"]
atlas = ExtResource("2_4htae")
region = Rect2(144, 320, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kao2"]
atlas = ExtResource("2_4htae")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqn1i"]
atlas = ExtResource("2_4htae")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mgc2"]
atlas = ExtResource("2_4htae")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blnbq"]
atlas = ExtResource("2_4htae")
region = Rect2(48, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn6o8"]
atlas = ExtResource("2_4htae")
region = Rect2(96, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy54v"]
atlas = ExtResource("2_4htae")
region = Rect2(144, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y750s"]
atlas = ExtResource("2_4htae")
region = Rect2(192, 192, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jye80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4htae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2rsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibkcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeu7y")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7pji")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2fko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxxyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mt4b")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 2.3,
"texture": SubResource("AtlasTexture_7kao2")
}, {
"duration": 2.3,
"texture": SubResource("AtlasTexture_gqn1i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mgc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn6o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy54v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y750s")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mgc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blnbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn6o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy54v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y750s")
}],
"loop": false,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2rsr"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4htae"]
radius = 13.9983
height = 36.027

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2rsr"]
radius = 15.998
height = 49.9938

[node name="Slime King" type="CharacterBody2D" groups=["Boss"]]
collision_layer = 2
script = ExtResource("1_y750s")
enemy_to_spawn = ExtResource("2_g2rsr")
spawn_enemy_count = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_jye80")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2rsr")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="BosSlimeHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BosSlimeHitbox"]
rotation = 1.55509
shape = SubResource("CapsuleShape2D_4htae")

[node name="bosSlimeDealDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bosSlimeDealDamage"]
position = Vector2(-2.84217e-14, -2)
rotation = 1.55509
shape = SubResource("CapsuleShape2D_g2rsr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="HealthBarBoss" parent="CanvasLayer" instance=ExtResource("4_g2rsr")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -40.0
offset_right = 242.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
target_path = NodePath("../..")

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="BosSlimeHitbox" to="." method="_on_bos_slime_hitbox_area_entered"]
[connection signal="area_entered" from="bosSlimeDealDamage" to="." method="_on_bos_slime_deal_damage_area_entered"]
[connection signal="area_exited" from="bosSlimeDealDamage" to="." method="_on_bos_slime_deal_damage_area_exited"]
